--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -52,20 +52,21 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="28dp" />
 
-        <!-- Email Input -->
+        <!-- Full Name Input -->
         <EditText
-            android:id="@+id/FullNameInput"
+            android:id="@+id/input_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:background="@drawable/edit_text_bg"
             android:hint="Full Name"
             android:textSize="20sp"
-            android:inputType="textEmailAddress"
+            android:inputType="textPersonName"
             android:padding="18dp" />
 
+        <!-- Email Input -->
         <EditText
-            android:id="@+id/EmailInput"
+            android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -77,7 +78,7 @@
 
         <!-- Password Input -->
         <EditText
-            android:id="@+id/passwordInput"
+            android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -87,15 +88,13 @@
             android:inputType="textPassword"
             android:padding="18dp" />
 
-        <!-- Remember Me & Forgot Password -->
+        <!-- Empty forgot password placeholder -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:orientation="horizontal"
             android:gravity="center_vertical">
-
-
 
             <TextView
                 android:id="@+id/forgotPassword"
